Removed gap on navbar and made it fixed position

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
-body {
+html,body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +11,22 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+nav{
+  background-color: bisque;
+  position: fixed;
+  width: 100%;
+  top: 0px;
+
+}
+
+nav ul{
+  list-style: none;
+  display: flex;
+  justify-content: flex-end;
+}
+
+nav li{
+  margin-right: 10px;
 }
